--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I have no idea where I got /res/card.svg from or what it's license is.
+I have no idea where I got /res/card.svg from or what its license is.
